--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetin Luquinhasz</title>
+    <link rel="stylesheet" href="./style.css"/>
+
     <p>
         teste fonte abcdefghijklmnopqrstuvwxyz
     </p>
