--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
     <title>Projetin Luquinhasz</title>
     <link rel="stylesheet" href="./style.css"/>
 
-    <p>
-        teste fonte abcdefghijklmnopqrstuvwxyz
-    </p>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jersey+20+Charted&display=swap" rel="stylesheet">
 
 </head>
 <body>
+     <p>
+        amor pelo amor de deus eu pedi pra me mandar duas fotos pra por no teu portifolio e tu nao colocasse AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+    </p>
     
+<div id="container">
+<div id="profile">
+<img src="./assets/avatar.png" alt="Luquinhas">
+
+</div>
+</div>
 </body>
 </html>
