--- a/index.html
+++ b/index.html
@@ -27,12 +27,22 @@
     <div id="container">
         <div id="profile">
             <img src="./assets/avatar.png" alt="Luquinhas">
+
         </div>
         <p id="write">
-            
-            escolhe o que vc quer escrito aq
+            Lucas Rios
         </p>
+
+        <p id="write1">
+        FilmerMaker e Editor
+        </p>
+
         <ul>
+
+            <li id="link">
+                <a href="#">Fluxo Reflexões (em breve)</a>
+            </li>
+
             <li>
                 <a href="https://drive.google.com/file/d/1RudGA_lTCnFTodHLQfysBb1ysyoEI5in/view?usp=sharing" target="_blank">Marketing digital</a>
 
@@ -46,11 +56,14 @@
                 <a href="https://www.instagram.com/luquinhasrioszinho/" target="_blank">Poemas</a>
             </li>
 
-            <li>
-                <a href="#">Fluxo Reflexões (em breve)</a>
-            </li>
         </ul>
     </div>
+
+        <p id="write2"> 
+            Contando histórias através de vídeos memoráveis.
+        </p>
+
+
 </body>
 </html>
 
