--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         <ul>
 
             <li id="link">
-                <a href="#">Fluxo Reflexões (em breve)</a>
+                <a href="#"><span style="color: rgb(136, 124, 124);">Fluxo Reflexões (em breve)</span></a>
+                
+
             </li>
 
             <li>
