--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 
             <li id="link">
                 <a href="#"><span style="color: rgb(136, 124, 124);">Fluxo Reflexões (em breve)</span></a>
-                
-
+        
             </li>
 
             <li>
@@ -59,13 +58,18 @@
             </li>
 
         </ul>
+        <div id="social-links">
+            <ion-icon name="logo-whatsapp"></ion-icon>
+            <ion-icon name="logo-instagram"></ion-icon>
+            <ion-icon name="mail-outline"></ion-icon>
+        </div>
     </div>
 
-        <p id="write2"> 
-            Contando histórias através de vídeos memoráveis.
-        </p>
+    <p id="write2"> 
+        Contando histórias através de vídeos memoráveis.
+    </p>
 
-
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
-
