--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </p>
 
         <p id="write1">
-        FilmerMaker e Editor
+        FilmerMaker, Editor e Fotográfo
         </p>
 
         <ul>
@@ -59,15 +59,28 @@
 
         </ul>
         <div id="social-links">
-            <ion-icon name="logo-whatsapp"></ion-icon>
+            <a href="https://wa.me/+556199470106" target="_blank">
+                <ion-icon name="logo-whatsapp"></ion-icon>
+            </a>
+            <a href="https://www.instagram.com/riosfluxo?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"> 
             <ion-icon name="logo-instagram"></ion-icon>
-            <ion-icon name="mail-outline"></ion-icon>
+            </a>
+            
         </div>
     </div>
 
-    <p id="write2"> 
+<p id="frase"> 
         Contando histórias através de vídeos memoráveis.
     </p>
+
+    <footer>
+         Feito por 
+         <a href="https://www.instagram.com/n_ayphs/" target="_blank">
+            Nayara 
+            <ion-icon name="heart-circle-outline">
+            </ion-icon> 
+    </a> 
+    </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
