--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Jersey+20+Charted&family=Jersey+25+Charted&display=swap" rel="stylesheet">
 
     <style>
+
         /* Aplicando a fonte DM Sans aos elementos desejados */
+
+         .icon {
+      font-size: 50px;
+      color: black;
+      margin: 10px;
+    }
+    #services {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+    }
+
          body * {
             font-family: 'DM Sans', sans-serif;
             color: black;
@@ -73,6 +87,33 @@
         Contando histórias através de vídeos memoráveis.
     </p>
 
+
+<div id="services">
+    <ion-icon class="icon" name="megaphone-outline"></ion-icon> <!-- Marketing Digital -->
+    <ion-icon class="icon" name="options-outline"></ion-icon> <!-- Identidade Visual -->
+    <ion-icon class="icon" name="cash-outline"></ion-icon> <!-- Tráfego Pago -->
+    <ion-icon class="icon" name="videocam-outline"></ion-icon> <!-- VideoMaker -->
+    <ion-icon class="icon" name="camera-outline"></ion-icon> <!-- Fotografia -->
+  </div>
+
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+
+<div id="container-foto">
+<div id="foto">
+    <img src="./assets/foto.jpg" alt="lucas sorrindo">
+    </div>
+     <p id="bio">
+        
+        Ofereço serviços de Marketing Digital, Reestruturação e Consultoria de Identidade Visual, além de Tráfego Pago, VideoMaker, Edição de Vídeo e Fotografia para impulsionar marcas online ou eternizar momentos marcantes da vida.
+
+    </p>
+
+    
+    </div>
+
     <footer>
          Feito por 
          <a href="https://www.instagram.com/n_ayphs/" target="_blank">
@@ -81,8 +122,5 @@
             </ion-icon> 
     </a> 
     </footer>
-
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
